--- a/Carline the Cat/carlineTheCat.css
+++ b/Carline the Cat/carlineTheCat.css
@@ -1,5 +1,10 @@
-body {background-color: azure;}
+body {
+    background-color: azure;
+    font-family: sans-serif;
+    padding: 0px 30px 30px 30px;
+}
 
+a {
 background:    #e69138;
 background:    -webkit-linear-gradient(#e69138, #4c1130);
 background:    linear-gradient(#e69138, #4c1130);
@@ -7,6 +12,27 @@ border-radius: 5px;
 padding:       8px 20px;
 color:         #ffffff;
 display:       inline-block;
-font:          normal 700 24px/1 "Calibri", sans-serif;
+font:          normal 500 24px/1 "Calibri", sans-serif;
 text-align:    center;
 text-shadow:   1px 1px #000000;
+text-decoration: none;
+}
+
+a:hover {
+    background: orange;
+}
+
+img {
+     -webkit-animation-name: spin;
+    -webkit-animation-duration: 4000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+}
+
+   @-webkit-keyframes spin { 
+        from { 
+            -webkit-transform: rotate(0deg); 
+        } to { 
+            -webkit-transform: rotate(360deg); 
+        }
+    }
